# neuroreader

./: .gitignore  LICENSE  README.md  pyproject.toml
neuroreader/: __init__.py  cli.py  config.py  hotkey.py  pdf_reader.py  server.py  tts.py
scripts/: install-macos-service.sh  install.sh
static/css/: style.css
static/js/: app.js
templates/: index.html
